# mx-gui

./: .gitignore  Cargo.toml  README.md
fonts/: LICENSE.md
src/: config.rs  file.rs  main.rs  message.rs  styles.rs
src/api/: mod.rs
src/scenes/: mod.rs  welcome.rs
src/widgets/: file.rs
