[package]
name = "mx-gui"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.1.1", features = ["debug"] }
iced_native = "0.2.2"
walkdir = "2.3.1"
mime_guess = "2.0.3"
