[package]
name = "mx-gui"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.1.1", features = ["debug", "tokio"] }
iced_native = "0.2.2"
walkdir = "2.3.1"
mime_guess = "2.0.3"
tokio = { version = "0.2.21", features = ["full"] }
md5 = "0.7.0"
reqwest = { version = "0.10.6", features = ["json", "stream"] }
anyhow = "1.0.31"
thiserror = "1.0.19"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
tokio-util = { version = "0.3.1", features = ["codec"] }
